# voidink

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
apps/api/: .env.example  Dockerfile  requirements.txt
apps/api/voidink_api/: __init__.py  config.py  main.py
apps/api/voidink_api/routes/: health.py  predict.py
apps/api/voidink_api/schemas/: emotion.py
apps/web/: .gitignore  package.json  tailwind.config.ts
apps/web/app/: layout.tsx  page.tsx
apps/web/app/about/: page.tsx
apps/web/app/analyze/: page.tsx
apps/web/app/batch/: page.tsx
apps/web/app/explore/: page.tsx
apps/web/components/charts/: PlotlyEmotionChart.tsx
apps/web/components/emotion/: EmotionBars.tsx
apps/web/components/horror/: GrainOverlay.tsx  Nav.tsx
apps/web/lib/: api-client.ts  csv-parser.ts  emotions.ts
apps/web/styles/: globals.css
data/sample/: sample_reviews.csv
docs/: dataset.md  model-comparison.md
ml/voidink_ml/: __init__.py
ml/voidink_ml/config/: __init__.py  emotions.yaml
ml/voidink_ml/data/collectors/: steam.py
ml/voidink_ml/data/labeling/: weak_labels.py
ml/voidink_ml/data/preprocess/: clean.py
ml/voidink_ml/evaluate/: metrics.py
ml/voidink_ml/features/: tfidf.py
ml/voidink_ml/inference/: predictor.py
ml/voidink_ml/models/: baseline_lr.py
ml/voidink_ml/train/: train_baseline.py  train_transformer.py
models/: baseline_lr.pkl  baseline_metrics.json  registry.json
