[project]
name = "voidink-ml"
version = "0.1.0"
description = "ML pipeline for voidink emotion classification"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "nltk>=3.8",
    "langdetect>=1.0.9",
    "requests>=2.31",
    "praw>=7.7",
    "transformers>=4.36",
    "torch>=2.1",
    "datasets>=2.16",
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.1", "jupyter>=1.0", "ipykernel>=6.29"]

[tool.ruff]
line-length = 100
target-version = "py310"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["ml"]
